Change HTML language to French and add meta tags for SEO in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8">
   <title>S3Security</title>
@@ -9,6 +9,9 @@
   <meta name="google-site-verification" content="sOz4WYkQnRPGTnWT8JarPZTYVn5wFn4s4hbVjUe4awE" />
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <meta [name]="metaTitle" [content]="metaDescription" />
+    <meta [name]="metaKeywords" [content]="metaKeywordsContent" />
+  </app-root>
 </body>
 </html>
